# dog_agent

./: .gitignore  Cargo.toml  Makefile  NOTE-HANDOFF.md  README.md  config.example.toml
debian/: dog-agent.service  dog-agent.tmpfiles  postinst  prerm
src/: compression.rs  config.rs  error.rs  main.rs
src/collectors/: auditd.rs  files.rs  mod.rs  network.rs  services.rs  system.rs  users.rs
src/firewall/: mod.rs
src/protocol/: cybersheppard.rs  firedog.rs  mod.rs
src/targets/: cybersheppard.rs  firedog.rs  mod.rs  sentinelcore.rs
src/threat/: mod.rs
