[package]
name = "dog-agent"
version = "1.0.0"
edition = "2021"
authors = ["Dognet Technologies"]
description = "Unified agent for Dognet Suite (FireDog, CyberSheppard, SentinelCore)"

[[bin]]
name = "dog-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Compression (CyberSheppard)
zstd = "0.13"

# Hashing (file integrity)
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# System info (collectors)
sysinfo = "0.30"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID (command IDs)
uuid = { version = "1.6", features = ["v4"] }

# CLI arguments
clap = { version = "4.4", features = ["derive"] }

# File walk (integrity monitor)
walkdir = "2.4"

# Hostname
hostname = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# cargo-deb metadata for .deb packaging
[package.metadata.deb]
maintainer = "Dognet Technologies <info@dognet.it>"
copyright = "2024, Dognet Technologies"
extended-description = """\
Unified Dog Agent for the Dognet Suite.
Supports FireDog, CyberSheppard and SentinelCore backends.
A single binary configured via /etc/dog-agent/agent.conf."""
depends = "$auto"
section = "net"
priority = "optional"
# NB: la unit systemd NON va elencata qui — la feature `systemd-units` di
# cargo-deb la preleva automaticamente da maintainer-scripts (debian/) e la
# installa in lib/systemd/system/. Elencarla anche negli assets la duplica
# nel pacchetto (due file systemd in conflitto all'installazione).
assets = [
    ["target/release/dog-agent", "usr/bin/", "755"],
    ["config.example.toml", "etc/dog-agent/agent.conf.example", "644"],
]
conf-files = ["/etc/dog-agent/agent.conf"]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
